[package]
authors = ["Giacomo Folli <giacomofolli@proton.me>"]
name = "grind"
description = "A task management CLI tool"
version = "0.1.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/giacomo-folli/grind"
homepage = "https://github.com/giacomo-folli/grind"
license = "MIT OR Apache-2.0"
keywords = ["taskmanagement", "cli"]
categories = ["command-line-utilities"]


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
chrono = "0.4.44"
nanoid = "0.5.0"
comfy-table = "7.2.2"
colored = "3.1.1"
anyhow = "1.0.102"
